--- a/styles/portpolio.css
+++ b/styles/portpolio.css
@@ -19,7 +19,7 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  margin: 50px 200px;
+  padding: 50px 200px;
 }
 nav ul {
   display: flex;
