--- a/styles/portpolio.css
+++ b/styles/portpolio.css
@@ -37,7 +37,15 @@ nav li {
   border: none;
   color: #ffffff;
 }
-
+.btn-contact {
+  border-radius: 5px;
+  padding: 15px;
+  border: none;
+  width: 125px;
+  height: 50px;
+  border: 1px solid #fd6e0a;
+  color: #fd6e0a;
+}
 .banner {
   display: flex;
   margin: 0 200px;
@@ -194,6 +202,9 @@ hr {
 }
 .contact a {
   text-decoration: none;
+  color: #fd6e0a;
+  margin-right: 25px;
+  font-size: 30px;
 }
 .contact input[type="text"],
 input[type="email"],
