--- a/styles/portpolio.css
+++ b/styles/portpolio.css
@@ -217,3 +217,17 @@ textarea {
   font-weight: 400;
   font-size: 16px;
 }
+/* footer styles */
+footer {
+  text-align: center;
+  background-color: rgb(10, 102, 241);
+  padding: 20px;
+}
+footer p {
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  font-size: 25px;
+  font-style: italic;
+}
